--- a/packages/web3-core-requestmanager/package.json
+++ b/packages/web3-core-requestmanager/package.json
@@ -16,7 +16,6 @@
         "util": "^0.12.0",
         "web3-core-helpers": "1.3.4",
         "web3-providers-http": "1.3.4",
-        "web3-providers-ipc": "1.3.4",
-        "web3-providers-ws": "1.3.4"
+        "web3-providers-ipc": "1.3.4"
     }
 }
